Fixed spacing issues on mobile browsers

--- a/blogs/style/common_styles.css
+++ b/blogs/style/common_styles.css
@@ -98,5 +98,4 @@ footer {
 pre {
 	white-space: pre-wrap;
 	word-wrap: break-word;
-	text-align: justify;
 }
