--- a/blogs/style/common_styles_dark.css
+++ b/blogs/style/common_styles_dark.css
@@ -79,5 +79,4 @@ footer {
 pre {
 	white-space: pre-wrap;
 	word-wrap: break-word;
-	text-align: justify;
 }
